# learnFi.app

./: .gitignore  BUILD_STATUS.md  IMPLEMENTATION_COMPLETE.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: auth.py  courses.py  tasks.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  badge.py  course.py  staking.py  task.py  user.py  xp.py
backend/app/schemas/: auth.py  course.py  task.py  user.py
backend/app/services/: auth_service.py  course_service.py  task_service.py  user_service.py  verification_service.py  xp_service.py
contracts/: .env.example  hardhat.config.ts  package.json
contracts/contracts/: BadgeNFT.sol  LearnFiToken.sol
contracts/scripts/: deploy.ts
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/features/: CourseCard.tsx  WalletButton.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  error.tsx  input.tsx  loading.tsx  progress.tsx
frontend/src/config/: index.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: index.ts  useAuth.ts  useCourses.ts  useUser.ts
frontend/src/pages/: CourseDetailPage.tsx  CoursesPage.tsx  DashboardPage.tsx  LandingPage.tsx  ProfilePage.tsx
frontend/src/stores/: authStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
